--- a/react-front-end/src/style/quiz.css
+++ b/react-front-end/src/style/quiz.css
@@ -171,12 +171,13 @@
   font-family: 'Playpen Sans', cursive;
 }
 
-.game-over-popup p {
+.game-over-popup li {
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  list-style-type: none;
 }
 
 .game-over-buttons button {
