--- a/react-front-end/src/style/instruction.css
+++ b/react-front-end/src/style/instruction.css
@@ -70,7 +70,7 @@ p {
   font-weight: bold;
 }
 
-li {
+.boxes li {
   margin: 12px 0px 12px;
   font-size: large;
   font-family: 'Playpen Sans', cursive;
